--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "symfony/validator": "^6.2",
-        "symfony/security-core": "^6.2"
+        "symfony/security-core": "^6.2",
+        "ext-readline": "*"
     }
 }
